@@ -2,7 +2,8 @@ Pro 1.0.17
 ==========
 
 Fixes:
- - Fixed : Orange selection indicator around grid not correctly sized (MODELER-356)
+ - Fixed: Orange selection indicator around grid not correctly sized (MODELER-356)
+ - Fixed: Widgets shift by 1 pixel when being selected (MODELER-420)
 
 Pro 1.0.16
 ==========
